Added open graph metadata

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <header>
     <meta charset="utf-8">
+    <meta property="og:image" content="images/gau-heu.png">
+    <meta property="og:description" content="Shop Gấu Hêu chuyên cung cấp các dịch vụ liên quan đến ăn uống, thời trang, vui chơi giải trí...">
+    <meta property="og:title" content="Shop Gấu Hêu">
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <title>Shop Gấu Hêu</title>
