--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <header>
     <meta charset="utf-8">
+    <meta property="og:url" content="images/gau-heu.png">
     <meta property="og:image" content="images/gau-heu.png">
     <meta property="og:description" content="Shop Gấu Hêu chuyên cung cấp các dịch vụ liên quan đến ăn uống, thời trang, vui chơi giải trí...">
     <meta property="og:title" content="Shop Gấu Hêu">
