--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html>
+<html lang=vi>
   <header>
     <meta charset="utf-8">
+    
+    <meta name="author" content="Khanh Nguyen">
+    <meta name="description" content="Shop Gấu Hêu chuyên cung cấp các dịch vụ liên quan đến ăn uống, thời trang, vui chơi giải trí...">
     <meta property="og:url" content="images/gau-heu.png">
     <meta property="og:image" content="images/gau-heu.png">
     <meta property="og:description" content="Shop Gấu Hêu chuyên cung cấp các dịch vụ liên quan đến ăn uống, thời trang, vui chơi giải trí...">
     <meta property="og:title" content="Shop Gấu Hêu">
+    
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <title>Shop Gấu Hêu</title>
